# RelayIQ

./: .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  conftest.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 35bc5a8c6cb1_initial_schema.py  db1ad41a1dd3_provider_health_reservoir_and_cost_.py
apps/api/data/: synthetic_world.json
apps/api/relayiq/: __init__.py  config.py  db.py  enums.py  logging_setup.py  main.py  security.py
apps/api/relayiq/api/: deps.py
apps/api/relayiq/api/routers/: admin.py  auth.py  crm_api.py  enrichment.py  entities.py  misc.py  (+3 more)
apps/api/relayiq/benchmark/: calibration.py  cli.py  runner.py
apps/api/relayiq/canonical/: normalize.py
apps/api/relayiq/engines/: confidence.py  decision.py  orchestrator.py  reconciliation.py  routing.py
apps/api/relayiq/models/: __init__.py  base.py  crm.py  enrichment.py  entities.py  observations.py  providers.py  review.py  tenancy.py  webhooks.py
apps/api/relayiq/observability/: metrics.py  tracing.py
apps/api/relayiq/providers/: base.py  registry.py  simulators.py
apps/api/relayiq/schemas/: common.py  enrichment.py
apps/api/relayiq/scripts/: export_openapi.py
apps/api/relayiq/seed/: cli.py  worldgen.py
apps/api/relayiq/services/: audit.py  budget.py  cache.py  crm.py  crm_gate.py  crm_sync.py  entities.py  idempotency.py  ledger.py  lineage.py  policy.py  provider_exec.py  quality.py  ratelimit.py  review.py  ssrf.py  staleness.py  webhook_security.py
apps/api/relayiq/workers/: celery_app.py  tasks.py
apps/api/tests/: conftest.py
apps/api/tests/e2e/: test_scenarios.py
apps/api/tests/integration/: test_auth_and_tenancy.py  test_concurrency.py  test_hardening.py  test_pipeline.py
apps/api/tests/unit/: conftest.py  test_engines.py  test_normalize.py  test_security_hardening.py  test_services.py  test_ssrf.py  test_webhook_security.py
(+107 files in other folders)
