[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "relayiq"
version = "0.1.0"
description = "RelayIQ — enrichment control plane: field-level routing, caching, reconciliation, confidence, cost ledger"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "SQLAlchemy>=2.0.30,<3",
    "alembic>=1.13,<2",
    "psycopg[binary]>=3.2,<4",
    "redis>=5.0,<6",
    "celery>=5.4,<6",
    "PyJWT>=2.9,<3",
    "bcrypt>=4.2,<5",
    "PyYAML>=6.0,<7",
    "httpx>=0.27,<1",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20,<1",
    "opentelemetry-api>=1.26,<2",
    "opentelemetry-sdk>=1.26,<2",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "opentelemetry-exporter-otlp-proto-http>=1.26,<2",
    "structlog>=24.1,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0",
    "fakeredis[lua]>=2.23,<3",  # [lua] enables EVAL for the cache stampede-lock tests
    "respx>=0.21,<1",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "locust>=2.29,<3",
    "freezegun>=1.5,<2",
]

[tool.setuptools.packages.find]
include = ["relayiq*"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "S"]
ignore = ["S101", "B008"]  # asserts in tests; FastAPI Depends() default-arg idiom

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106", "S311"]
"relayiq/seed/*" = ["S311"]      # seeded PRNG is intentional (synthetic data)
"relayiq/providers/simulators/*" = ["S311"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = ["ignore::DeprecationWarning"]
